src/global.less
/* ... */
.cascader-popup-wrapper {
  width: 100%;
  border: 1px solid var(--ant-color-border);
  inset: 53px auto auto 0 !important;
  border-radius: 0 0 var(--border-radius-base) var(--border-radius-base);
  border-top: none;
  max-height: 240px;
  min-height: 100px;

  &.gpu-selector {
    .ant-cascader-menu:last-child {
      flex: auto;

      .ant-cascader-menu-item {
        display: flex;

        .ant-cascader-checkbox {
          align-self: flex-start;
          margin-top: 5px;
        }
      }
    }
  }

  .ant-cascader-menu {
    overflow-x: hidden;

    &::-webkit-scrollbar {
      width: var(--scrollbar-size);
    }

    &::-webkit-scrollbar-thumb {
      background-color: transparent;
      border-radius: 4px;
    }

    &::-webkit-scrollbar-track {
      background-color: transparent;
    }

    &:hover {
      &::-webkit-scrollbar-thumb {
        background-color: var(--color-scrollbar-thumb);
        border-radius: 4px;
      }
    }

    .ant-cascader-menu-item-content {
      width: 100%;
      padding-right: 11px;
    }
  }
}

.ant-tooltip {
  max-width: var(--width-tooltip-max);

  .ant-tooltip-content {
    .ant-tooltip-inner {
      max-width: var(--width-tooltip-max);

      .text-tertiary {
        color: var(--color-white-secondary);
      }

      a {
        color: var(--ant-blue);

        &:hover {
          color: var(--ant-blue-5);
        }
      }
    }
  }
}

.light-downloading-tooltip {
  &.ant-tooltip .ant-tooltip-arrow::before {
    background: var(--color-spotlight-bg);
  }
}

.tooltip-wrapper {
  display: flex;
  flex-direction: column;
  gap: 4px;
  font-size: 11px;
  background-color: transparent;
  min-width: 100px;
  max-width: 500px;

  &.scatter {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(48%, 1fr));
    gap: 8px;
  }

  &.tooltip-grid {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    gap: 4px 12px;

    .tooltip-x-name {
      grid-column: 1 / -1;
    }
  }

  .tooltip-x-name {
    font-size: var(--font-size-small);
    color: var(--ant-color-text-tertiary);
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }

  .tooltip-item {
    color: var(--ant-color-text-secondary);
    display: flex;
    justify-content: space-between;
    align-items: center;

    .tooltip-item-name {
      display: inline-flex;
      align-items: center;
      min-width: 0;
      flex: 1;
      overflow: hidden;
    }

    .tooltip-item-dot {
      display: inline-block;
      width: 8px;
      height: 8px;
      margin-right: 5px;
      flex-shrink: 0;
    }

    .tooltip-item-title {
      margin-right: 2px;
      display: inline-block;
      max-width: 200px;
      overflow: hidden;
      text-overflow: ellipsis;
      white-space: nowrap;
    }

    .tooltip-value {
      margin-left: 10px;
      flex-shrink: 0;
      color: var(--ant-color-text);
      text-overflow: ellipsis;
      overflow: hidden;
    }
  }
}

.ant-pro-sider-logo + div {
  &::-webkit-scrollbar {
    width: 0;
  }
}

.ant-notification .ant-notification-notice-close {
  width: fit-content !important;
}

.desc-block {
  border-radius: var(--border-radius-2px);
  background-color: rgb(89 89 89);
  font-weight: var(--font-weight-bold);
  padding: 2px;
}

.note-text {
  font-size: var(--font-size-base);
  color: var(--ant-color-text-tertiary);
  font-weight: var(--font-weight-medium);
}

.ant-progress-line {
  font-size: var(--font-size-small);
}

.ant-pro-page-container-affix .ant-affix .ant-pro-page-container-warp {
  box-shadow: none;
  border-bottom: 1px solid var(--ant-color-split);

  .ant-page-header-heading-title {
    color: var(--ant-color-text) !important;
  }
}

.ant-page-header .ant-page-header-heading-extra {
  margin-block: 0;
}

.ant-pro-footer-bar {
  padding-inline: 0 !important;
}

.ant-modal-root .ant-modal-mask.ant-modal-mask-blur {
  backdrop-filter: blur(2px);
}

.ant-drawer .ant-drawer-mask.ant-drawer-mask-blur {
  backdrop-filter: blur(2px);
}

.ant-pro-grid-content {
  padding-right: 8px;
  padding-block: 8px;
}

